--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -11,3 +11,9 @@ h5 {text-align: center; padding-top: 20px; font-size: 24px !important;}
 .col-md-3.left, .col-md-3.middle, .col-md-3.right {background-color: #D8D8D8;}
 #map { height: 100%; width: 100%; }
 #txtSearch { width: 500px; height: 60px; z-index: 1000; position: absolute; top: 100px; left: 20px; background-color: white;}
+.leaflet-container { background: transparent; }
+.leaflet-marker-icon { background: url(/assets/pin.png); padding: 6px; padding-bottom: 17px; top: -6px; left: -6px; }
+.leaflet-popup-content { 
+	h2 { font-size: 18px; color: blue; font-family: "Arial";}
+	.item { margin-bottom: 5px; font-size: 14px; }
+}
